--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1,22 +1,21 @@
 @article{Daudén-Esmel2024,
-	author = {Cristòfol Daudén-Esmel and Jordi Castellà-Roca and Alexandre Viejo},
+	author = {Cristòfol Daudén-Esmel and Jordi Castellà-Roca and Alexandre
+	          Viejo},
 	title = {Blockchain-based access control system for efficient and
 	         GDPR-compliant personal data management},
 	journal = {Computer Communications},
 	volume = {214},
 	year = {2024},
-	pages = {67-87},
 	keywords = {Blockchain, GDPR, Personal Data Management},
 }
 
 @inproceedings{Santos2021,
-	author = {Cristiana Santos and Midas Nouwens and Michael Toth and Nataliia
-	          Bielova and Vincent Roca},
+	author = {Cristiana Santos and Midas Nouwens and Michael Toth and
+	          Nataliia Bielova and Vincent Roca},
 	title = {Consent Management Platforms under the GDPR: processors and/or
 	         controllers?},
 	booktitle = {APF 2021 - 9th Annual Privacy Forum},
 	year = {2021},
-	pages = {47--69},
 	address = {Oslo, Norway},
 	doi = {10.1007/978-3-030-76663-4_3},
 	url = {https://inria.hal.science/hal-03169436v1},
@@ -24,21 +23,22 @@
 }
 
 @article{nguyen2020gdpr,
-	author = {Nguyen Binh Truong and Kai Sun and Gyu Myoung Lee and Yike Guo},
-	title = {GDPR-Compliant Personal Data Management: A Blockchain-Based Solution},
+	author = {Nguyen Binh Truong and Kai Sun and Gyu Myoung Lee and Yike Guo
+	          },
+	title = {GDPR-Compliant Personal Data Management: A Blockchain-Based
+	         Solution},
 	journal = {IEEE Transactions on Information Forensics and Security},
 	volume = {15},
 	year = {2020},
-	pages = {1746-1761},
 	keywords = {Blockchain, GDPR, Personal Data Management, Smart Contracts},
 }
 
 @article{wirth2018privacy,
 	author = {Christian Wirth and Martin Kolain},
-	title = {Privacy by Blockchain Design: A Blockchain-enabled GDPR-compliant
-	         Approach for Handling Personal Data},
-	journal = {Reports of the European Society for Socially Embedded Technologies
-	           (EUSSET)},
+	title = {Privacy by Blockchain Design: A Blockchain-enabled
+	         GDPR-compliant Approach for Handling Personal Data},
+	journal = {Reports of the European Society for Socially Embedded
+	           Technologies (EUSSET)},
 	year = {2018},
 	keywords = {Blockchain, GDPR, Privacy, Data Protection},
 }
@@ -64,7 +64,9 @@
 	author = {{Osano}},
 	title = {Osano - Data Privacy Platform},
 	year = {2025},
-	url = {https://docs.osano.com/hc/en-us/articles/22472101620756-Osano-Cookies},
+	url = {
+	       https://docs.osano.com/hc/en-us/articles/22472101620756-Osano-Cookies
+	       },
 	note = {Acesso em: 07 fev. 2025},
 }
 
@@ -138,14 +140,30 @@
 	urldate = {2024-02-08},
 }
 
-@article{Nouwens2020,
-	author = {Nouwens, Midas and Liccardi, Ilaria and Veale, Michael and Karger,
-	          David and Kagal, Lalana},
-	title = {Dark Patterns after the {GDPR}: Scraping Consent Pop-ups and
-	         Demonstrating their Influence},
-	journal = {Proceedings of the 2020 CHI Conference on Human Factors in
-	           Computing Systems},
-	year = {2020},
-	pages = {1--13},
-	publisher = {ACM},
+@online{MozillaBrowserExtensions,
+	author = {Mozilla},
+	title = {Browser extensions},
+	year = {2025},
+	url = {
+	       https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions
+	       },
+	urldate = {2025-08-20},
+}
+
+@online{VueJS,
+	author = {Vue},
+	title = {Working with Webpack},
+	year = {2025},
+	url = { https://cli.vuejs.org/guide/webpack.html },
+	urldate = {2025-08-20},
+}
+
+@techreport{rfc7515,
+	author = {Michael B. Jones and John Bradley and Nat Sakimura},
+	title = {JSON Web Signature (JWS)},
+	institution = {Internet Engineering Task Force (IETF)},
+	type = {RFC},
+	number = {7515},
+	year = {2015},
+	url = {https://datatracker.ietf.org/doc/html/rfc7515#section-7.2.1},
 }
