--- a/dissertation.bib
+++ b/dissertation.bib
@@ -94,6 +94,14 @@
 	note = {Acesso em: 07 fev. 2025},
 }
 
+@misc{gitklaro,
+	author = {{Klaro}},
+	title = {Klaro! A Simple Consent Manager},
+	year = {2025},
+	url = {https://github.com/kiprotect/klaro},
+	note = {Acesso em: 07 set. 2025},
+}
+
 @misc{cookiechimp,
 	author = {{CookieChimp}},
 	title = {CookieChimp - Cookie Consent Solution},
@@ -166,4 +174,17 @@
 	number = {7515},
 	year = {2015},
 	url = {https://datatracker.ietf.org/doc/html/rfc7515#section-7.2.1},
+}
+
+@article{digitalsignatures,
+  title={Digital signatures},
+  author={Subramanya, S.R. and Yi, B.K.},
+  journal={IEEE Potentials},
+  volume={25},
+  number={2},
+  pages={5--8},
+  year={2006},
+  publisher={IEEE},
+  doi={10.1109/MP.2006.1649003},
+  url={https://www.researchgate.net/publication/3227862_Digital_signatures}
 }
