--- a/dissertation.tex
+++ b/dissertation.tex
@@ -72,6 +72,8 @@
 
 \newacronym{api}{API}{\textit{Application Programming Interface}}
 
+\newacronym{ca}{CA}{\textit{Certificate Authority}}
+
 \cleardoublepage
 \pagenumbering{arabic}
 
@@ -85,6 +87,7 @@
 \part{Corpo da Dissertação}
 
 \input{chapters/Contribution}
+\input{chapters/Solution}
 \input{chapters/Applications}
 \input{chapters/ConclusionsAndFutureWork}
 \input{chapters/PlannedSchedule}
