--- a/dissertation.tex
+++ b/dissertation.tex
@@ -78,19 +78,19 @@
 \pagenumbering{arabic}
 
 %-- Dissertation 
-\part{Material Introdutório}
+%\part{Material Introdutório}
 
 \input{chapters/Introduction}
-\input{chapters/StateOfTheArt}
-\input{chapters/ProblemAndChallenges}
+\input{chapters/RelatedWork}
+%\input{chapters/ProblemAndChallenges}
 
-\part{Corpo da Dissertação}
+%\part{Corpo da Dissertação}
 
-\input{chapters/Contribution}
+\input{chapters/Architecture}
 \input{chapters/Solution}
-\input{chapters/Applications}
 \input{chapters/ConclusionsAndFutureWork}
-\input{chapters/PlannedSchedule}
+\input{chapters/Evaluation}
+%\input{chapters/PlannedSchedule}
 
 \renewcommand{\baselinestretch}{1}
 \bibliographystyle{plainnat}
