--- a/preamble/Abstract.tex
+++ b/preamble/Abstract.tex
@@ -1,17 +1,22 @@
 \chapter*{Resumo}
 
 %Escrever aqui o resumo (pt)
-A gestão de consentimento de dados é uma questão central no contexto de regulamentações como o \acrfull{rgpd}, que visa garantir a privacidade dos utilizadores. Esta pré-tese explora as \acrfull{cmp} existentes, destacando as suas características, limitações e potencialidades para a criação de soluções mais auditáveis e transparentes. O objetivo é desenvolver uma solução que permita não apenas recolher consentimentos de forma eficaz, mas também auditar as escolhas dos utilizadores. Inicialmente, foi realizada uma análise do estado da arte, que incluiu plataformas como Osano, Cookiebot, Klaro.js e outros, além de soluções avançadas como Google Consent Mode. Verificou-se que as \acrshort{cmp}s existentes, embora robustas, apresentam limitações no que toca à auditoria e à transparência do fluxo de dados entre clientes e servidores. A proposta deste trabalho é projetar e prototipar um sistema que integre a recolha de consentimento com mecanismos de auditoria baseados em técnicas inovadoras, como \textit{blockchain} e contratos inteligentes. Esta abordagem permitirá garantir que os consentimentos recolhidos são transmitidos e armazenados de forma verificável, assegurando conformidade com as normas aplicáveis. Este estudo visa contribuir para o desenvolvimento de soluções inovadoras que reforcem a confiança dos utilizadores no tratamento dos seus dados, promovendo uma maior transparência e conformidade regulatória.
+A gestão de consentimento de dados é uma questão central no contexto de regulamentações como o \acrfull{rgpd}, que visa garantir a privacidade dos utilizadores. Esta dissertação explora as \acrfull{cmp} existentes, destacando as suas características, limitações e potencialidades para a criação de soluções mais auditáveis e transparentes. 
+O objetivo é desenvolver uma solução que permita não apenas recolher consentimentos de forma eficaz, mas também auditar as escolhas dos utilizadores.
+Inicialmente, foi realizada uma análise do trabalho relacionado, que incluiu não apenas plataformas como Osano, Cookiebot, Klaro.js e outros, além de soluções avançadas como o Google Consent Mode, mas também abordagens complementares para a gestão de consentimento, nomeadamente baseadas em tecnologias como \textit{blockchain} e contratos inteligentes. Verificou-se que as \acrshort{cmp}s existentes, embora robustas, apresentam limitações no que toca à auditoria e à transparência do fluxo de dados entre clientes e servidores.
+Neste projeto é demonstrado e feita uma prova de conceito de um sistema que integre a recolha de consentimento com mecanismos de auditoria. A abordagem permite garantir que os consentimentos recolhidos são armazenados de forma verificável, como também imutável, assegurando conformidade com as normas aplicáveis. Este estudo visa contribuir para o desenvolvimento de uma solução que reforça a confiança dos utilizadores no tratamento dos seus dados, promovendo uma maior transparência e conformidade regulatória.
 
-\paragraph{Palavras-chave} \acrshort{cmp}, \acrshort{rgpd}, auditoria, privacidade, \textit{blockchain}, \textit{open source}
+\paragraph{Palavras-chave} \acrshort{cmp}, \acrshort{rgpd}, auditoria, transparência, auditabilidade, imutabilidade, privacidade, \textit{open source}
 
 \cleardoublepage
 
 \chapter*{Abstract}
 
 %Write abstract here (en)
-Data consent management is a central issue in the context of regulations such as the \acrfull{gdpr}, which aims to ensure user privacy. This pre-thesis explores existing consent management platforms (CMPs), highlighting their features, limitations, and potential for creating more auditable and transparent solutions. The objective is to develop a solution that not only effectively collects consents but also audits user choices. Initially, a state-of-the-art analysis was conducted, which included platforms such as Osano, Cookiebot, Klaro.js, and others, as well as advanced solutions like Google Consent Mode. It was found that existing \acrshort{cmp}s, although robust, have limitations regarding the auditability and transparency of data flows between clients and servers. The proposed work aims to design and prototype a system that integrates consent collection with audit mechanisms based on innovative techniques such as \textit{blockchain} and smart contracts. This approach will ensure that collected consents are transmitted and stored in a verifiable manner, guaranteeing compliance with applicable regulatory standards. This study seeks to contribute to the development of innovative solutions that enhance user trust in data processing, promoting greater transparency and regulatory compliance.
+Data consent management is a central issue in the context of regulations such as the \acrfull{gdpr}, which aim to ensure user privacy. This dissertation explored existing consent management platforms (CMPs), highlighting their features, limitations, and potential for creating more auditable and transparent solutions. The objective was to develop a solution that not only effectively collected consents but also audited user choices. 
+Initially, a related work analysis was carried out, which included not only platforms such as Osano, Cookiebot, Klaro.js, and others, as well as advanced solutions like Google Consent Mode, but also complementary approaches to consent management, namely those based on technologies such as \textit{blockchain} and smart contracts. It was found that existing \acrshort{cmp}s, although robust, presented limitations regarding the auditability and transparency of data flows between clients and servers.
+In this project, a proof of concept was implemented, integrating consent collection with auditing mechanisms. The approach ensured that collected consents were stored in a verifiable manner, as well being immutable, guaranteeing compliance with applicable regulatory standards. This study contributed to the development of a solution that reinforced user trust in data processing, promoting greater transparency and regulatory compliance.
 
-\paragraph{Keywords} \acrshort{cmp}, \acrshort{gdpr}, auditing, privacy, \textit{blockchain}, \textit{open source}
+\paragraph{Keywords} \acrshort{cmp}, \acrshort{gdpr}, auditing, transparency, auditability, immutability, privacy, \textit{open source}
 
 \cleardoublepage
