--- a/dissertation.bib
+++ b/dissertation.bib
@@ -110,6 +110,20 @@
 	note = {Acesso em: 07 fev. 2025},
 }
 
+@misc{gdpr,
+	title = {{R}egulation {(EU)} 2016/679 of the {E}uropean {P}arliament and
+	         of the {C}ouncil of 27 {A}pril 2016 on the protection of natural
+	         persons with regard to the processing of personal data and on
+	         the free movement of such data, and repealing {D}irective 95/46/
+	         {EC} ({G}eneral {D}ata {P}rotection {R}egulation)},
+	author = {{European Union}},
+	year = {2016},
+	url = {
+	       https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32016R0679
+	       },
+	note = {Official Journal of the European Union, L 119/1},
+}
+
 @misc{gdpr2016,
 	title = {Article 4 - Definitions},
 	author = {{European Parliament and Council}},
@@ -177,14 +191,112 @@
 }
 
 @article{digitalsignatures,
-  title={Digital signatures},
-  author={Subramanya, S.R. and Yi, B.K.},
-  journal={IEEE Potentials},
-  volume={25},
-  number={2},
-  pages={5--8},
-  year={2006},
-  publisher={IEEE},
-  doi={10.1109/MP.2006.1649003},
-  url={https://www.researchgate.net/publication/3227862_Digital_signatures}
+	title = {Digital signatures},
+	author = {Subramanya, S.R. and Yi, B.K.},
+	journal = {IEEE Potentials},
+	volume = {25},
+	number = {2},
+	pages = {5--8},
+	year = {2006},
+	publisher = {IEEE},
+	doi = {10.1109/MP.2006.1649003},
+	url = {
+	       https://www.researchgate.net/publication/3227862_Digital_signatures
+	       },
+}
+
+@article{ribeiro2025assessing,
+	title = {Assessing the information security posture of online public
+	         services worldwide: Technical insights, trends, and policy
+	         implications},
+	author = {Ribeiro, Diogo and Fonte, V{\'\i}tor and Ramos, Luis Felipe
+	          and Silva, Jo{\~a}o Marco},
+	journal = {Government Information Quarterly},
+	volume = {42},
+	number = {2},
+	pages = {102031},
+	year = {2025},
+	publisher = {Elsevier},
+}
+
+@inproceedings{ramos2019privacy,
+	title = {Privacy and data protection concerns regarding the use of
+	         blockchains in smart cities},
+	author = {Ramos, Luis Felipe M and Silva, Jo{\~a}o Marco C},
+	booktitle = {Proceedings of the 12th international conference on theory
+	             and practice of electronic governance},
+	pages = {342--347},
+	year = {2019},
+}
+
+@mastersthesis{Frank2018,
+	month = {October},
+	author = {Frank, Fabian},
+	year = {2018},
+	school = {University of Twente},
+	address = {Enschede},
+	type = {Thesis},
+	title = {Consent management on the Ethereum Blockchain},
+	abstract = {Exchanging personal information for access to a service has
+	            become an integral part of everyday life. Surprisingly often,
+	            we do not even realize that this exchange is taking place.
+	            When accepting the terms of service agreement of a company,
+	            it is often unclear what is happening to (personal) data.
+	            Unknowingly, users had out blank cheques to companies,
+	            allowing them to control and resell the their data. The
+	            General Data Protection Regulation (GDPR), which became
+	            enforceable in May 2018, is a first step towards putting
+	            users back in control of their personal data. With these new
+	            regulations, the existing solutions for consent management
+	            are not feasible any more for a data marketplace as well as
+	            for most consent scenarios. Utilizing the Design Science
+	            Research (DSR) methodology, this master thesis aims to create
+	            a prototype of a consent management system on the Ethereum
+	            Blockchain. With this prototype, we envision a data
+	            marketplace scenario which enables users to control their
+	            data.},
+	url = { https://purl.utwente.nl/essays/76745},
+}
+
+@standard{ETSI_EN_319_411_1,
+	title = {Electronic Signatures and Infrastructures (ESI); Policy and
+	         security requirements for Trust Service Providers issuing
+	         certificates; Part 1: General requirements},
+	organization = {European Telecommunications Standards Institute (ETSI)},
+	number = {EN 319 411-1 V1.4.1},
+	year = {2023},
+	month = {October},
+	note = {Part 1: General requirements},
+	url = {
+	       https://www.etsi.org/deliver/etsi_en/319400_319499/31941101/01.04.01_60/en_31941101v010401p.pdf
+	       },
+}
+
+@misc{NISTMAC,
+	author = {National Institute of Standards and Technology},
+	title = {Glossary: Message Authentication Code (MAC)},
+	howpublished = {\url{
+	                https://csrc.nist.gov/glossary/term/message_authentication_code
+	                }},
+	note = {Acedido em: 19 de Outubro de 2025},
+}
+
+@misc{Auth0SigningAlgorithms,
+	author = {Auth0},
+	title = {Signing Algorithms},
+	year = {2025},
+	url = {
+	       https://auth0.com/docs/get-started/applications/signing-algorithms
+	       },
+	note = {Acedido em: 19 de Outubro de 2025},
+}
+
+@misc{ScottBrady2020,
+	author = {Scott Brady},
+	title = {JWTs: Which Signing Algorithm Should I Use?},
+	year = {2020},
+	howpublished = {\url{
+	                https://www.scottbrady.io/jose/jwts-which-signing-algorithm-should-i-use
+	                }},
+	note = {Acedido em: 19 de Outubro de 2025},
 }
