--- a/preamble/Abstract.tex
+++ b/preamble/Abstract.tex
@@ -1,19 +1,23 @@
 \chapter*{Resumo}
 
+% O que se quer no resumo então?
+
 %Escrever aqui o resumo (pt)
-A gestão de consentimento de dados é uma questão central no contexto de regulamentações como o \acrfull{rgpd}, que visa garantir a privacidade dos utilizadores. Esta dissertação explora as \acrfull{cmp} existentes, destacando as suas características, limitações e potencialidades para a criação de soluções mais auditáveis e transparentes. 
-O objetivo é desenvolver uma solução que permita não apenas recolher consentimentos de forma eficaz, mas também auditar as escolhas dos utilizadores.
-Inicialmente, foi realizada uma análise do trabalho relacionado, que incluiu não apenas plataformas como Osano, Cookiebot, Klaro.js e outros, além de soluções avançadas como o Google Consent Mode, mas também abordagens complementares para a gestão de consentimento, nomeadamente baseadas em tecnologias como \textit{blockchain} e contratos inteligentes. Verificou-se que as \acrshort{cmp}s existentes, embora robustas, apresentam limitações no que toca à auditoria e à transparência do fluxo de dados entre clientes e servidores.
-Neste projeto é demonstrado e feita uma prova de conceito de um sistema que integre a recolha de consentimento com mecanismos de auditoria. A abordagem permite garantir que os consentimentos recolhidos são armazenados de forma verificável, como também imutável, assegurando conformidade com as normas aplicáveis. Este estudo visa contribuir para o desenvolvimento de uma solução que reforça a confiança dos utilizadores no tratamento dos seus dados, promovendo uma maior transparência e conformidade regulatória.
+A gestão do consentimento de dados é uma das questões centrais para garantir a privacidade de todos os utilizadores, tendo em consideração regulamentações já existentes para o cumprimento da mesma. Esta dissertação explora as \acrfull{cmp} existentes, destacando as suas características, limitações e potencialidades de forma a criar soluções mais auditáveis e transparentes. 
+Assim, foi proposta uma solução que permite, não só recolher consentimentos de forma mais eficiente, mas também verificar as escolhas dos utilizadores. Inicialmente, foi realizada uma análise ao tratamento de dados, incluindo plataformas como Osano, Cookiebot, Klaro.js, entre outras, englobando soluções avançadas, como o caso do Google Consent Mode, e abordagens complementares para a gestão deste mesmo consentimento, baseadas em tecnologias como \textit{blockchain} e contratos inteligentes. Contudo, foi possível verificar que as soluções já existentes, embora robustas, apresentam limitações no que toca à auditoria e transparência do fluxo de dados entre clientes e \textit{provedores de serviço}. Os resultados obtidos permitem demonstrar uma prova de conceito de um sistema que integra a recolha de consentimento com mecanismos de auditoria, permitindo garantir que as autorizações recolhidas são armazenadas de forma verificável e imutável. 
+Desta forma, esta dissertação propõe o desenvolvimento de uma solução que reforça a confiança dos utilizadores no tratamento dos seus dados, promovendo uma maior transparência e autonomia na gestão destes mesmos dados por parte do utilizador.
 
 \paragraph{Palavras-chave} \acrshort{cmp}, \acrshort{rgpd}, auditoria, transparência, auditabilidade, imutabilidade, privacidade, \textit{open source}
+
+% Demasiado genericos, rever
 
 \cleardoublepage
 
 \chapter*{Abstract}
 
 %Write abstract here (en)
-Data consent management is a central issue in the context of regulations such as the \acrfull{gdpr}, which aim to ensure user privacy. This dissertation explored existing consent management platforms (CMPs), highlighting their features, limitations, and potential for creating more auditable and transparent solutions. The objective was to develop a solution that not only effectively collected consents but also audited user choices. 
+Data consent management is a central issue in the context of regulations such as the \acrfull{gdpr}, which aim to ensure user privacy. This dissertation explored existing consent management platforms (CMPs), highlighting their features, limitations, and potential for creating more auditable and transparent solutions. 
+It was developed a solution that not only effectively collected consents but also audited user choices. 
 Initially, a related work analysis was carried out, which included not only platforms such as Osano, Cookiebot, Klaro.js, and others, as well as advanced solutions like Google Consent Mode, but also complementary approaches to consent management, namely those based on technologies such as \textit{blockchain} and smart contracts. It was found that existing \acrshort{cmp}s, although robust, presented limitations regarding the auditability and transparency of data flows between clients and servers.
 In this project, a proof of concept was implemented, integrating consent collection with auditing mechanisms. The approach ensured that collected consents were stored in a verifiable manner, as well being immutable, guaranteeing compliance with applicable regulatory standards. This study contributed to the development of a solution that reinforced user trust in data processing, promoting greater transparency and regulatory compliance.
 
