--- a/dissertation.bib
+++ b/dissertation.bib
@@ -300,3 +300,26 @@
 	                }},
 	note = {Acedido em: 19 de Outubro de 2025},
 }
+
+@article{Merlec2021,
+	author = {Merlec, Mpyana Mwamba and Lee, Youn Kyu and Hong, Seng-Phil
+	          and In, Hoh Peter},
+	title = {A Smart Contract-Based Dynamic Consent Management System for
+	         Personal Data Usage under GDPR},
+	journal = {Sensors},
+	volume = {21},
+	number = {23},
+	pages = {7994},
+	year = {2021},
+	doi = {10.3390/s21237994},
+}
+
+@misc{Aldred2019,
+	author = {Aldred, Nathaniel and Baal, Luke and Broda, Graeham and
+	          Trumble, Steven and Mahmoud, Qusay H.},
+	title = {Design and Implementation of a Blockchain-based Consent
+	         Management System},
+	year = {2019},
+	howpublished = {arXiv preprint arXiv:1912.09882},
+	doi = {10.48550/arXiv.1912.09882},
+}
