--- a/preamble/Abstract.tex
+++ b/preamble/Abstract.tex
@@ -4,10 +4,11 @@
 
 %Escrever aqui o resumo (pt)
 A gestão do consentimento de dados é uma das questões centrais para garantir a privacidade de todos os utilizadores, tendo em consideração regulamentações já existentes para o cumprimento da mesma. Esta dissertação explora as \acrfull{cmp} existentes, destacando as suas características, limitações e potencialidades de forma a criar soluções mais auditáveis e transparentes. 
-Assim, foi proposta uma solução que permite, não só recolher consentimentos de forma mais eficiente, mas também verificar as escolhas dos utilizadores. Inicialmente, foi realizada uma análise ao tratamento de dados, incluindo plataformas como Osano, Cookiebot, Klaro.js, entre outras, englobando soluções avançadas, como o caso do Google Consent Mode, e abordagens complementares para a gestão deste mesmo consentimento, baseadas em tecnologias como \textit{blockchain} e contratos inteligentes. Contudo, foi possível verificar que as soluções já existentes, embora robustas, apresentam limitações no que toca à auditoria e transparência do fluxo de dados entre clientes e \textit{provedores de serviço}. Os resultados obtidos permitem demonstrar uma prova de conceito de um sistema que integra a recolha de consentimento com mecanismos de auditoria, permitindo garantir que as autorizações recolhidas são armazenadas de forma verificável e imutável. 
+Assim, foi proposta uma solução que permite recolher consentimentos verificáveis, isto é, que servem como prova para os utilizadores no caso de não conformidade com as suas escolhas. Inicialmente, foi realizada uma análise ao tratamento de dados, incluindo plataformas como Osano, Cookiebot, Klaro.js, entre outras, englobando soluções avançadas, como o caso do Google Consent Mode, e abordagens complementares para a gestão deste mesmo consentimento, baseadas em tecnologias como \textit{blockchain} e contratos inteligentes.
+Contudo, foi possível verificar que as soluções já existentes, embora robustas, apresentam limitações no que toca à auditoria e transparência do fluxo de dados entre clientes e \textit{provedores de serviço}. Os resultados obtidos permitem demonstrar uma prova de conceito de um sistema que integra a recolha de consentimento com mecanismos de prova, permitindo garantir que as autorizações recolhidas são armazenadas de forma verificável, imutável e não repudiável. 
 Desta forma, esta dissertação propõe o desenvolvimento de uma solução que reforça a confiança dos utilizadores no tratamento dos seus dados, promovendo uma maior transparência e autonomia na gestão destes mesmos dados por parte do utilizador.
 
-\paragraph{Palavras-chave} \acrshort{cmp}, \acrshort{rgpd}, auditoria, transparência, auditabilidade, imutabilidade, privacidade, \textit{open source}
+\paragraph{Palavras-chave} consentimento, \acrshort{cmp}, \acrshort{rgpd}, auditoria, prova, transparência, auditabilidade, imutabilidade, privacidade, \textit{open source}, assinaturas digitais, certificados, JWS, não-repúdio
 
 % Demasiado genericos, rever
 
@@ -16,11 +17,11 @@ Desta forma, esta dissertação propõe o desenvolvimento de uma solução que r
 \chapter*{Abstract}
 
 %Write abstract here (en)
-Data consent management is a central issue in the context of regulations such as the \acrfull{gdpr}, which aim to ensure user privacy. This dissertation explored existing consent management platforms (CMPs), highlighting their features, limitations, and potential for creating more auditable and transparent solutions. 
-It was developed a solution that not only effectively collected consents but also audited user choices. 
-Initially, a related work analysis was carried out, which included not only platforms such as Osano, Cookiebot, Klaro.js, and others, as well as advanced solutions like Google Consent Mode, but also complementary approaches to consent management, namely those based on technologies such as \textit{blockchain} and smart contracts. It was found that existing \acrshort{cmp}s, although robust, presented limitations regarding the auditability and transparency of data flows between clients and servers.
-In this project, a proof of concept was implemented, integrating consent collection with auditing mechanisms. The approach ensured that collected consents were stored in a verifiable manner, as well being immutable, guaranteeing compliance with applicable regulatory standards. This study contributed to the development of a solution that reinforced user trust in data processing, promoting greater transparency and regulatory compliance.
+Data consent management is one of the central issues for ensuring user privacy, taking into account existing regulations that govern compliance. This dissertation explores existing \acrfull{cmp}s, highlighting their characteristics, limitations, and potential to create more auditable and transparent solutions. 
+Thus, a solution was proposed that allows the collection of verifiable consents, that is, consents that serve as proof for users in cases of non-compliance with their choices. Initially, an analysis of data processing was carried out, including platforms such as Osano, Cookiebot, Klaro.js, among others, encompassing advanced solutions such as Google Consent Mode, as well as complementary approaches to consent management based on technologies such as \textit{blockchain} and smart contracts. 
+However, it was found that existing solutions, although robust, present limitations in terms of auditing and transparency of data flows between clients and \textit{service providers}. The results obtained demonstrate a proof of concept of a system that integrates consent collection with proof mechanisms, ensuring that the authorizations collected are stored in a verifiable and immutable way. 
+In this way, this dissertation proposes the development of a solution that strengthens user trust in data processing, promoting greater transparency and autonomy in the management of their own data.
 
-\paragraph{Keywords} \acrshort{cmp}, \acrshort{gdpr}, auditing, transparency, auditability, immutability, privacy, \textit{open source}
+\paragraph{Keywords} consent, \acrshort{cmp}, \acrshort{gdpr}, auditing, transparency, auditability, proof, immutability, privacy, \textit{open source}, digital signatures, certificates, JWS, non-repudiation
 
 \cleardoublepage
