--- a/dissertation.bib
+++ b/dissertation.bib
@@ -323,3 +323,11 @@
 	howpublished = {arXiv preprint arXiv:1912.09882},
 	doi = {10.48550/arXiv.1912.09882},
 }
+
+@misc{cryptoeprint:2024/1839,
+	author = {F. Betül Durak and Abdullah Talayhan and Serge Vaudenay},
+	title = {Cryptographically Secure Digital Consent},
+	howpublished = {Cryptology {ePrint} Archive, Paper 2024/1839},
+	year = {2024},
+	url = {https://eprint.iacr.org/2024/1839},
+}
