ajuste no 4.2 para poc e open-source

--- a/preamble/Acknowledgements.tex
+++ b/preamble/Acknowledgements.tex
@@ -1,6 +1,18 @@
 \chapter*{Agradecimentos}
 \setlength{\parskip}{1em}
 
-Escreva aqui os seus agradecimentos. Não se esqueça de mencionar, caso seja esse o caso, os projetos e bolsas dos quais se beneficiou enquanto fazia a sua investigação. Pergunte ao seu orientador sobre o formato específico a ser usado. (As agências de financiamento são bastante rigorosas quanto a isso.)
+A concretização desta Dissertação de Mestrado de Engenharia Informática representa o culminar de um intenso período de trabalho e dedicação, e não teria sido possível sem o apoio inestimável de diversas pessoas e entidades. A todos, o meu sincero e profundo reconhecimento.
+
+Em primeiro lugar, expresso a minha mais profunda gratidão aos meus dois orientadores: o Professor Doutor João Marco Cardoso da Silva e a Professora Doutora Ana Luísa Parreira Nunes Alonso. Por todo o conhecimento transmitido, pela orientação constante, pelo estímulo crítico e pela inesgotável paciência demonstrada. A vossa experiência e dedicação foram pilares essenciais para o desenvolvimento desta dissertação.
+
+O meu reconhecimento estende-se a todos os contributos científicos que pavimentaram o caminho para esta investigação. Agradeço a toda a comunidade académica e a todos os autores e investigadores cujas obras, artigos e projetos serviram de base teórica, inspiração e sustentação para o desenvolvimento deste trabalho. O rigor e o conhecimento partilhado permitiram edificar esta tese com a solidez necessária.
+
+Finalmente, mas não menos importantes, os agradecimentos mais pessoais e calorosos.
+
+À minha família, pelo apoio incondicional, compreensão e incentivo constante que me deram ao longo de todo o percurso académico. A vossa presença foi fundamental para manter a motivação e o foco.
+
+E, de forma muito especial, à minha namorada, pela motivação e amor ao longo desta jornada. O teu carinho e paciência foram o refúgio e a força de que precisei nos momentos mais exigentes.
+
+A todos, o meu muito obrigado.
 
 \setlength{\parskip}{0em}
