--- a/preamble/Acknowledgements.tex
+++ b/preamble/Acknowledgements.tex
@@ -1,18 +1,16 @@
 \chapter*{Agradecimentos}
 \setlength{\parskip}{1em}
 
-A concretização desta Dissertação de Mestrado de Engenharia Informática representa o culminar de um intenso período de trabalho e dedicação, e não teria sido possível sem o apoio inestimável de diversas pessoas e entidades. A todos, o meu sincero e profundo reconhecimento.
+A realização desta Dissertação de Mestrado em Engenharia Informática marca o fim de um período exigente de trabalho e dedicação, que não teria sido possível sem o apoio valioso de várias pessoas e instituições. A todos, deixo o meu sincero agradecimento.
 
-Em primeiro lugar, expresso a minha mais profunda gratidão aos meus dois orientadores: o Professor Doutor João Marco Cardoso da Silva e a Professora Doutora Ana Luísa Parreira Nunes Alonso. Por todo o conhecimento transmitido, pela orientação constante, pelo estímulo crítico e pela inesgotável paciência demonstrada. A vossa experiência e dedicação foram pilares essenciais para o desenvolvimento desta dissertação.
+Em primeiro lugar, expresso o meu sincero agradecimento aos meus orientadores, o Professor Doutor João Marco Cardoso da Silva e a Professora Doutora Ana Luísa Parreira Nunes Alonso, pelo conhecimento partilhado, pela orientação constante e pelo apoio prestado ao longo de todo o processo. A vossa disponibilidade e empenho foram fundamentais para o desenvolvimento desta dissertação.
 
-O meu reconhecimento estende-se a todos os contributos científicos que pavimentaram o caminho para esta investigação. Agradeço a toda a comunidade académica e a todos os autores e investigadores cujas obras, artigos e projetos serviram de base teórica, inspiração e sustentação para o desenvolvimento deste trabalho. O rigor e o conhecimento partilhado permitiram edificar esta tese com a solidez necessária.
+O meu agradecimento estende-se também a todos os contributos científicos que serviram de base a esta investigação. Agradeço à comunidade académica e aos autores e investigadores cujos trabalhos, artigos e projetos forneceram o enquadramento teórico e o suporte necessários para a realização deste estudo. O rigor e a partilha de conhecimento foram essenciais para a consolidação deste trabalho.
 
-Finalmente, mas não menos importantes, os agradecimentos mais pessoais e calorosos.
+Por fim, deixo uma palavra especial de agradecimento à minha família, pelo apoio, compreensão e incentivo constantes ao longo de todo o percurso académico. A vossa presença foi determinante para manter a motivação e o equilíbrio.
 
-À minha família, pelo apoio incondicional, compreensão e incentivo constante que me deram ao longo de todo o percurso académico. A vossa presença foi fundamental para manter a motivação e o foco.
+De forma especial, agradeço à minha namorada, pela paciência, encorajamento e carinho demonstrados ao longo desta etapa. O teu apoio foi uma fonte importante de motivação nos momentos mais desafiantes.
 
-E, de forma muito especial, à minha namorada, pela motivação e amor ao longo desta jornada. O teu carinho e paciência foram o refúgio e a força de que precisei nos momentos mais exigentes.
-
-A todos, o meu muito obrigado.
+A todos, o meu sincero obrigado.
 
 \setlength{\parskip}{0em}
