--- a/preamble/Acknowledgements.tex
+++ b/preamble/Acknowledgements.tex
@@ -1,6 +1,16 @@
 \chapter*{Agradecimentos}
 \setlength{\parskip}{1em}
 
-Escreva aqui os seus agradecimentos. Não se esqueça de mencionar, caso seja esse o caso, os projetos e bolsas dos quais se beneficiou enquanto fazia a sua investigação. Pergunte ao seu orientador sobre o formato específico a ser usado. (As agências de financiamento são bastante rigorosas quanto a isso.)
+A realização desta Dissertação de Mestrado em Engenharia Informática marca o fim de um período exigente de trabalho e dedicação, que não teria sido possível sem o apoio valioso de várias pessoas e instituições. A todos, deixo o meu sincero agradecimento.
+
+Em primeiro lugar, expresso o meu sincero agradecimento aos meus orientadores, o Professor Doutor João Marco Cardoso da Silva e a Professora Doutora Ana Luísa Parreira Nunes Alonso, pelo conhecimento partilhado, pela orientação constante e pelo apoio prestado ao longo de todo o processo. A vossa disponibilidade e empenho foram fundamentais para o desenvolvimento desta dissertação.
+
+O meu agradecimento estende-se também a todos os contributos científicos que serviram de base a esta investigação. Agradeço à comunidade académica e aos autores e investigadores cujos trabalhos, artigos e projetos forneceram o enquadramento teórico e o suporte necessários para a realização deste estudo. O rigor e a partilha de conhecimento foram essenciais para a consolidação deste trabalho.
+
+Por fim, deixo uma palavra especial de agradecimento à minha família, pelo apoio, compreensão e incentivo constantes ao longo de todo o percurso académico. A vossa presença foi determinante para manter a motivação e o equilíbrio.
+
+De forma especial, agradeço à minha namorada, pela paciência, encorajamento e carinho demonstrados ao longo desta etapa. O teu apoio foi uma fonte importante de motivação nos momentos mais desafiantes.
+
+A todos, o meu sincero obrigado.
 
 \setlength{\parskip}{0em}
